Ejejmplo 6 final con absolute y relative

--- a/ejejmplo 6/index.html
+++ b/ejejmplo 6/index.html
@@ -11,7 +11,7 @@
         <input type="checkbox" id="check">
         <label for="check">Dame Click</label>
         <div class="box"></div>
-        <div class="box"></div>
+        <div class="rojo">DIV ROJO</div>
     </section>
 </body>
 </html>
