Ejejmplo 6 final con absolute y relative sos ejejmplos

--- a/ejejmplo 6/index.html
+++ b/ejejmplo 6/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectores</title>
-    <link rel="stylesheet" href="style2.css">
+    <!-- <link rel="stylesheet" href="style2.css"> -->
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <section>
         <input type="checkbox" id="check">
         <label for="check">Dame Click</label>
         <div class="box"></div>
-        <div class="rojo">DIV ROJO</div>
+        <div class="azul">DIV AZUL
+            <div class="rojo">DIV ROJO</div>
+
+        </div>
     </section>
 </body>
 </html>
