--- a/ejejmplo 4/index.html
+++ b/ejejmplo 4/index.html
@@ -11,6 +11,9 @@
     <h2 class="titulo">Soy un elemento h2 dentro section</h2>
     <p>Hola soy hermano adyacente</p>
     <span>HOLA SPAN</span>
+    <span>HOLA SPAN</span>
+    <br>
+    <span>HOLA SPAN</span>
     <p>Hola soy hermano adyacente</p>
     <p>Hola soy hermano adyacente</p>
     <p>Hola soy hermano adyacente</p>
